--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <h1 class="title">STUFF I NEED TO DO</h1>
 
   <div class="all-tasks">
-    <h4 class="task-list-title">My List</h4>
+    <h4 class="task-list-title">My Lists</h4>
     <ul class="task-list">
       <li class="task-item active-list">YouTube</li>
       <li class="task-item">Work</li>
