Adding data-lists attribute

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
   <div class="all-tasks">
     <h4 class="task-list-title">My Lists</h4>
-    <ul class="task-list">
-      <li class="task-item active-list">YouTube</li>
-      <li class="task-item">Work</li>
-      <li class="task-item">Groceries</li>
+    <ul class="task-list" data-lists>
+      <!-- <li class="list-item active-list">YouTube</li>
+      <li class="list-item">Work</li>
+      <li class="list-item">Groceries</li> -->
     </ul>
     <form action="">
       <input 
