--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
       <li class="list-item">Work</li>
       <li class="list-item">Groceries</li> -->
     </ul>
-    <form action="">
+    <form action="" data-new-list-form>
       <input 
       type="text"
       class="new list" 
       placeholder="new list name" 
       aria-label="new list name"
+      data-new-list-input
       />
       <button class="btn list" aria-label="create new list">+</button>
     </form>
