Add data-attribute to delete list button

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       </div>
       <div class="delete-stuff">
         <button class="btn delete">Clear Completed tasks</button>
-        <button class="btn delete">Delete list</button>
+        <button class="btn delete" data-delete-list>Delete list</button>
       </div>
     </div>
   </div>
