--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
     </form>
   </div>
 
-  <div class="todo-list">
+  <div class="todo-list" data-list-task-display-container>
     <div class="todo-header">
-      <h5 class="list-title">YouTube</h5>
-      <p class="task-count">3 task remaining</p>
+      <h5 class="list-title" data-list-title>YouTube</h5>
+      <p class="task-count" data-task-count>3 task remaining</p>
     </div>
     <div class="todo-body">
-      <div class="tasks">
+      <div class="tasks" data-all-tasks>
         <div class="task">
           <input 
           type="checkbox"
@@ -47,7 +47,6 @@
             record todo list video
           </label>
         </div>
-      </div>
         <div class="task">
           <input 
           type="checkbox"
@@ -68,21 +67,31 @@
             another task
           </label>
         </div>
+      </div>
       <div class="creator">
-        <form action="">
+        <form action="" data-task-form>
           <input 
           type="text"
           class="new-task-input"
           placeholder="Enter new task"
-          aria-label="enter new task">
+          aria-label="enter new task"
+          data-new-task-input />
           <button class="btn new-task">+</button>
         </form>
       </div>
-      <div class="delete-stuff">
-        <button class="btn delete">Clear Completed tasks</button>
-        <button class="btn delete" data-delete-list>Delete list</button>
-      </div>
+    </div>
+    <div class="delete-stuff">
+      <button class="btn delete" data-delete-completed-task>Clear Completed tasks</button>
+      <button class="btn delete" data-delete-list>Delete list</button>
     </div>
   </div>
 </body>
+<template data-task-template>
+  <div class="task">
+    <input type="checkbox"/>
+    <label>
+      <span class="custom-checkbox"></span>
+    </label>
+  </div>
+</template>
 </html>
