Remove the scriptRepetition.js

--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Todo-list</title>
   <link rel="stylesheet" href="style.css">
-  <script src="script.js" defer></script>
+  <!-- <script src="script.js" defer></script> -->
+  <script src="scriptRepetition1.js" defer></script>
 </head>
 <body>
   <h1 class="title">STUFF I NEED TO DO</h1>
 
   <div class="all-tasks">
     <h4 class="task-list-title">My Lists</h4>
+    <!-- My List Section -->
     <ul class="task-list" data-lists>
       <!-- <li class="list-item active-list">YouTube</li>
       <li class="list-item">Work</li>
