Change to Script.js

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Todo-list</title>
   <link rel="stylesheet" href="style.css">
-  <!-- <script src="script.js" defer></script> -->
-  <script src="scriptRepetition1.js" defer></script>
+  <script src="script.js" defer></script>
+  <!-- <script src="scriptRepetition1.js" defer></script> -->
 </head>
 <body>
   <h1 class="title">STUFF I NEED TO DO</h1>
@@ -34,41 +34,11 @@
 
   <div class="todo-list" data-list-task-display-container>
     <div class="todo-header">
-      <h5 class="list-title" data-list-title>YouTube</h5>
-      <p class="task-count" data-task-count>3 task remaining</p>
+      <h5 class="list-title" data-list-title></h5>
+      <p class="task-count" data-task-count></p>
     </div>
     <div class="todo-body">
       <div class="tasks" data-all-tasks>
-        <div class="task">
-          <input 
-          type="checkbox"
-          id="task-1" 
-          />
-          <label for="task-1">
-            <span class="custom-checkbox"></span>
-            record todo list video
-          </label>
-        </div>
-        <div class="task">
-          <input 
-          type="checkbox"
-          id="task-2" 
-          />
-          <label for="task-2">
-            <span class="custom-checkbox"></span>
-            yeah another task
-          </label>
-        </div>
-        <div class="task">
-          <input 
-          type="checkbox"
-          id="task-3" 
-          />
-          <label for="task-3">
-            <span class="custom-checkbox"></span>
-            another task
-          </label>
-        </div>
       </div>
       <div class="creator">
         <form action="" data-task-form>
